[gd_scene load_steps=2 format=3 uid="uid://bkd3sflhcx052"]

[ext_resource type="Script" path="res://scripts/editor/map_pack_editor.gd" id="1_7vysa"]

[node name="MapPackEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vysa")

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(64, 32)
layout_mode = 0
offset_right = 64.0
offset_bottom = 32.0
text = "x"

[node name="Name" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 128.0
offset_right = -128.0
grow_horizontal = 2
placeholder_text = "Map Pack Name"

[node name="AddAll" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
offset_left = 128.0
offset_top = 65.0
offset_right = 512.0
offset_bottom = 96.0
text = "Add All"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = 128.0
offset_right = -128.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Items" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SavePack" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.5
offset_top = -31.0
offset_right = 71.5
grow_horizontal = 2
grow_vertical = 0
text = "Save Map Pack"

[node name="Copy Data" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 143.0
grow_vertical = 0
text = "Copy Data"

[node name="Delete Pack" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 31.0
grow_horizontal = 0
text = "Delete Pack"

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="text_changed" from="Name" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="AddAll" to="." method="_on_add_all_pressed"]
[connection signal="pressed" from="SavePack" to="." method="_on_save_pack_pressed"]
[connection signal="pressed" from="Copy Data" to="." method="_on_copy_data_pressed"]
[connection signal="pressed" from="Delete Pack" to="." method="_on_delete_pack_pressed"]
